--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vtex/react-csv-parse": "^3.0.2",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-csv-reader": "^1.2.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-motion": "^0.5.2",
+    "react-scripts": "3.0.1",
+    "react-simple-maps": "^0.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
